--- a/htdocs/html/employment.html
+++ b/htdocs/html/employment.html
@@ -88,17 +88,11 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            As a full-time employee for VettaFi (VettaFi was acquired by TMX in 2024), Paul's primary role was on VettaFi's Investor Behavioral Intelligence Platform (IBI).
-                            IBI consolidates electronic traded fund (ETF) data for analysis by brokers and clients.
-                            He added the fre trial login logic and UI.
+                            As a full-time employee at VettaFi (acquired by TMX in 2024), Paul primarily worked on VettaFi's Investor Behavioral Intelligence Platform (IBI). This platform consolidates ETF (exchange-traded fund) data for analysis by brokers and clients. One of his key contributions was implementing the free trial login logic and user interface.
                         </p>
                         <p class="fw-light mb-1">
-                            The work at VettaFi was done mostly in Ruby on Rails.
-                            It was full stack and involved everything from creating the model in the database/migration
-                            to implementing the controller and view. The view was done in React.js and turbo frames.
-                            Additionally, APIs had to be written to import the data from an AWS Redshift database.
-                            Most of the development was done in one-week sprints. Paul worked remotely for VettaFi
-                        </p>.
+                            The work at VettaFi was mainly in Ruby on Rails, covering full-stack development from database modeling and migrations to controller and view implementation. The views were developed using React.js and Turbo Frames. Paul also created APIs to import data from an AWS Redshift database, supporting seamless data integration. Development was organized into one-week sprints, and Paul worked remotely for VettaFi.
+                        </p>
                     </div>
                 </div>
                 <div class="collapse expandableVettaFiRows align-items-start row" id="expandableVettaFiRow2">
@@ -120,7 +114,7 @@
                     </div>
                     <div class="col-lg-3 mb-1">
                         <a href="../img/soloist.jpg" target="_blank">
-                            <img src="../img/soloist.jpg" class="img-fluid w-100" alt="Solpist page">
+                            <img src="../img/soloist.jpg" class="img-fluid w-100" alt="Soloist page">
                         </a>
                     </div>
                     <div class="col-lg-8 mb-1">
@@ -193,21 +187,10 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            Paul worked as a full-time employee for Entrision,
-                            a software consulting company. As an Entrision employee,
-                            he worked for Terminus an account based marketing (ABM)
-                            company that provides sales tools for reaching out to
-                            prospects. The primary product was Email Experience.
-                            Email Experience integrates with platforms
-                            like Salesforce, Google, HubSpot, Marketo.
-                            Paul was in a group tasked with maintaining and enhancing
-                            Email Experience as well as integrating with Salesforce.
-                            Paul primarily worked on the back end providing
-                            data.
+                            Paul worked as a full-time employee at Entrision, a software consulting company. During his time there, he contributed to a project for Terminus, an account-based marketing (ABM) company that provides sales tools to help reach prospective clients. His primary focus was on their Email Experience product, which integrates with platforms like Salesforce, Google, HubSpot, and Marketo. Paul was part of a team responsible for maintaining and enhancing Email Experience and for implementing integrations with Salesforce.
                         </p>
                         <p class="fw-light mb-1">
-                            Work for Entrision was done in Ruby on Rails, Java,
-                            Python, and shell scripts. Paul worked remotely for Entrision.
+                            His work at Entrision involved back-end development, providing robust data solutions. He primarily used Ruby on Rails, Java, Python, and shell scripting to complete his tasks. Paul worked remotely for Entrision.
                         </p>
                     </div>
                 </div>
@@ -273,22 +256,14 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            As a full-time employee for Airworthiness Certification Services (ACS),
-                            Paul wrote and maintained all features for the Process & Artifact Compliance Tool (PACT).
-                            PACT is a web application that aids in the process of certification for various regulatory processes,
-                            specifically it was originally designed for DO-178/DO-254 certification for the FAA, but it is flexable enough for most regulatory processes.
+                        <p class="fw-light mb-1">
+                            As a full-time employee at Airworthiness Certification Services (ACS), Paul developed and maintained all features for the Process & Artifact Compliance Tool (PACT). PACT is a web application designed to support certification processes for various regulatory standards. Initially created for DO-178/DO-254 FAA certification, it is flexible enough to accommodate a wide range of regulatory compliance processes.
                         </p>
                         <p class="fw-light mb-1">
-                            In addition to the work on PACT, Paul also enhanced and maintained ACS' and Patmos Engineering's
-                            existing websites. He also maintained a legacy system that PACT was based on in IIS.
-                            Paul also maintained all DevOps for ACS, including their servers (both physical and AWS).
-                            Paul oversaw the security site certification for ACS and implemented a plan for Cybersecurity Maturity Model Certification (CMMC) implementation.
+                            Beyond his work on PACT, Paul enhanced and maintained the websites for both ACS and Patmos Engineering. He also supported a legacy system, upon which PACT was originally based, hosted on IIS. Additionally, Paul handled all DevOps for ACS, managing both physical and AWS-based servers. His responsibilities included overseeing site security certifications and developing a plan to implement the Cybersecurity Maturity Model Certification (CMMC).
                         </p>
                         <p class="fw-light mb-1">
-                            The work at ACS was done in Ruby on Rails.
-                            It was full stack and involved everything from creating the model in the database/migration
-                            to implementing the controller and view.
-                            Paul worked remotely for Airworthiness Certification Services.
+                            The work at ACS was primarily done in Ruby on Rails, covering full-stack development from database modeling and migrations to implementing controllers and views. PACT itself is a web-based tool that assists with the compliance process for FAA approvals on DO-178/DO-254 projects, specifically supporting the development and archiving of compliance artifacts. Paul worked remotely for Airworthiness Certification Services.
                         </p>
                     </div>
                 </div>
@@ -306,7 +281,7 @@
                             <img src="../img/pact-projects-screen.png" class="img-fluid w-100" alt="PACT Projects Screen">
                         </a>
                         <a href="../img/pact-high-level-requirements-screen.png" target="_blank" class="mb-1">
-                            <img src="../img/pact-high-level-requirements-screen.png" class="img-fluid w-100" alt="PACT Hight Level Requirements Page">
+                            <img src="../img/pact-high-level-requirements-screen.png" class="img-fluid w-100" alt="PACT Height Level Requirements Page">
                         </a>
                     </div>
                     <div class="col-lg-8 mb-1">
@@ -391,20 +366,13 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            Paul worked As a full-time employee for Orcas Net / CUSO Financial Services (CFS)
-                            (Orcas Net was acquired by CFS in 2016), Orcas Net developed dataVISION (DV).
-                            DV is a customer relationship management (CRM) for Broker/Dealers.
-                            It maintains information on positions held by clients and commissions due to brokers.
-                            It receives data from funds and data aggregators, processes it and provides it to the Broker/Dealers.
-                            Paul was responsible for all the data imported into DV. In order to do this, he wrote
-                            Electronic Data Interchange (EDI) programs that received the data in various ways (APIs,
-                            FTPed files, and wrote several robots to acquire the data from websites when no other
-                            method was available). Paul also wrote a data editor to permit the editing of incoming data.
-                            Paul also help migrate DV from a legacy system to Ruby on Rails.
+                            Paul worked as a full-time employee at Orcas Net / CUSO Financial Services (CFS) (Orcas Net was acquired by CFS in 2016). Orcas Net developed dataVISION (DV), a customer relationship management (CRM) system for broker/dealers. DV manages client position information and broker commission details, receiving and processing data from funds and data aggregators to provide insights to broker/dealers.
                         </p>
                         <p class="fw-light mb-1">
-                            Work for CFS was done in Ruby on Rails. Paul worked on-site at Orcas Net but worked
-                            remotely when Orcas Net was purchased by CFS.
+                            Paul was responsible for managing all data imported into DV. To achieve this, he developed Electronic Data Interchange (EDI) programs that received data through various methods, including APIs, FTP files, and web-scraping robots when no direct data source was available. He also created a data editor to enable manual editing of incoming data. Additionally, Paul played a key role in migrating DV from a legacy system to Ruby on Rails.
+                        </p>
+                        <p class="fw-light mb-1">
+                            Paul's work at CFS was done primarily in Ruby on Rails. He initially worked on-site at Orcas Net but transitioned to remote work after the acquisition by CFS.
                         </p>
                     </div>
                 </div>
@@ -437,7 +405,9 @@
                                 Coded in C, Perl & SQL to design and implement all shipping software that Amazon.com used at the time. At peak load, the system shipped about half a million packages a day (hundreds of packages a minute) and ran 24/7 365 days a year
                             </li>
                             <li style="margin-bottom: 1em">
-                                Improved shipping time from 30 seconds down to less than 4 seconds (an 85% reduction)
+                                <b>
+                                    Improved shipping time from 30 seconds down to less than 4 seconds (an 85% reduction)
+                                </b>
                             </li>
                             <li style="margin-bottom: 1em">
                                 Wrote the software for a Client/Server based real-time automated package processing and labeling system (SLAM)
@@ -470,27 +440,13 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            When Paul first came to Amazon.com the DC Software group
-                            consisted of 3 people, Amazon.com only shipped books,
-                            it had only 2 DCs, and it could take 30 seconds or more to process a single shipment.
-                            By the time that Paul left, the DC Software group had nearly 100 engineers,
-                            Amazon.com shipped dozens of different types of products,
-                            it had 11 DCs (4 in foreign countries) and it took less than 4 seconds to process
-                            every shipment (including printing the shipping label). As mentioned above,
-                            Paul designed and implemented all the software that Amazon.com used to ship its
-                            packages (everything after the shipment has been packed). This included calculating
-                            the cost &amp; speed for various carriers, using various factors to choose a carrier,
-                            creating the shipping label, manifest and customs documents and recording the
-                            information about the shipment. All this is done in an automated real time environment
-                            that required that this process take no more than 4 seconds per package
-                            (including the time to print the label). The system was flexible enough to handle
-                            the requirements of many different carriers even foreign carriers (including Japan).
-                            Additionally, it could change seasonally and handle special promotions with just a
-                            day or so notice.
+                            When Paul first joined Amazon.com, the Distribution Center (DC) Software group was a small team of just three people, Amazon only shipped books, had two DCs, and each shipment could take over 30 seconds to process. By the time Paul left, the DC Software team had grown to nearly 100 engineers, Amazon was shipping a wide range of products, operated 11 DCs (including four internationally), and processed each shipment, including label printing, in under four seconds.
                         </p>
                         <p class="fw-light mb-1">
-                            The work for Amazon was done in C, C++, and Perl under
-                            HP Unix connecting to an Oracle SQL database. Paul worked on-site.
+                            Paul designed and implemented the entire software system Amazon used to ship packages after they were packed. This system handled carrier cost and speed calculations, carrier selection based on various criteria, and generated shipping labels, manifests, customs documents, and shipment records. The process was automated and ran in real time, requiring each step, including label printing, to be completed in under four seconds. The system was also flexible enough to adapt to various carrier requirements, including international carriers, and could adjust to seasonal demands or special promotions with minimal lead time.
+                        </p>
+                        <p class="fw-light mb-1">
+                            The work for Amazon was done in C, C++, and Perl on HP-UX, connected to an Oracle SQL database. Paul worked on-site.
                         </p>
                     </div>
                 </div>
