--- a/htdocs/html/family.html
+++ b/htdocs/html/family.html
@@ -30,13 +30,10 @@
                     <div class="col-lg-12 mb-3">
                         <h1 class="display-4 fw-bold mb-3 text-dark">Paul Carrick's Family</h1>
                         <p class="fw-light lead mb-5">
-                            Paul has been very blessed.
-                            He has a wife Virginia (they have been married 40 years).
-                            He has 2 children (Joy and Jonathan) and 3 grandchildren (Brandon, Kevin and Jessica).
-                            Addtionally, Paul has two sisters (Bonnie and Nita).
-                            Paul's parent are Tom and Vivian. Tom passed away in the 1990s and Vivian passed away in 2011 (RIP).
-                            Paul's extended family includes his nephew Tim (Bonnie's son), Tim's Wife Sheri.
-                            Tim and Sheri have 2 children Megan and Marshall. He also has a Niece (Jeanette, Nita's daughter).
+                            Paul feels truly blessed. He and his wife, Virginia, have been happily married for 40 years and have two children, Joy and Jonathan, as well as three wonderful grandchildren: Brandon, Kevin, and Jessica. Paul also has two sisters, Bonnie and Nita. His parents, Tom and Vivian, have passed (Tom in the 1990s and Vivian in 2011—RIP).
+                        </p>
+                        <p class="fw-light lead mb-5">
+                            His extended family includes his nephew Tim (Bonnie’s son) and Tim’s wife, Sheri, along with their two children, Megan and Marshall. He also has a niece, Jeanette, Nita’s daughter.
                         </p>
                     </div>
                 </div>
@@ -144,7 +141,7 @@
                             Cristina (Virginia's Niece)<br>
                             Skyler (Virginia's Other Great Niece)<br>
                             William Jeremy (Virginia's Nephew)<br>
-                            Bertie (Virginia's Mom in the wheelchair)<br>
+                            Bertie (Virginia's Mom in the chair)<br>
                             Joanne (Virginia's Other Niece)<br>
                             Virginia (Paul's Wife)<br>
                             Alison (Virginia's Other Great Niece)
