--- a/htdocs/html/footer.html
+++ b/htdocs/html/footer.html
@@ -46,7 +46,7 @@
                         <h2 class="fw-bold h5 mb-4 text-uppercase">Personal</h2>
                         <ul class="list-unstyled">
                             <li class="mb-3">
-                                <a href="family.html" class="link-light text-decoration-none">Paul'S Family</a>
+                                <a href="family.html" class="link-light text-decoration-none">Paul's Family</a>
                             </li>
                             <li class="mb-3">
                                 <a href="live.html" class="link-light text-decoration-none">Where Paul Lives</a>
