--- a/htdocs/html/header.html
+++ b/htdocs/html/header.html
@@ -27,7 +27,7 @@
                                     </a>
                                 </li>                                 
                                 <li class="nav-item dropdown">
-                                    <a class="dropdown-toggle nav-link px-lg-3 py-lg-4 text-uppercase" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="dropdown-toggle nav-link px-lg-3 py-lg-4 text-uppercase" href="#" id="navbarDropdownMenuLink1" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Personal&nbsp;
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -46,7 +46,7 @@
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="dropdown-toggle nav-link px-lg-3 py-lg-4 text-uppercase" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="dropdown-toggle nav-link px-lg-3 py-lg-4 text-uppercase" href="#" id="navbarDropdownMenuLink2" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Professional&nbsp;
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
