--- a/htdocs/html/hobbies.html
+++ b/htdocs/html/hobbies.html
@@ -29,10 +29,7 @@
                     <div class="col-lg-12 mb-12">
                         <h1 class="display-4 fw-bold mb-3 text-dark">Paul Carrick's Hobbies and Activities</h1>
                         <p class="fw-light lead mb-5">
-                            Paul as many hobbies and activities.
-                            He enjoys making music, photography, travel, cooking, home automation, snorkeling / SCUBA diving, and gardening.
-                            Paul is a thespian (he likes being in plays and musicals).
-                            As far as activities, Paul is a Christian and attends Orcas Island Community Church, also Paul is a former volunteer Firefighter / EMT with the Orcas Island Fire and Rescue.
+                            Paul has many hobbies and interests. He enjoys making music, photography, travel, cooking, home automation, snorkeling, SCUBA diving, and gardening. Paul is also a thespian, with a love for acting in plays and musicals. He is a Christian and attends Orcas Island Community Church. Additionally, he is a former volunteer firefighter and EMT with Orcas Island Fire and Rescue.
                         </p>
                     </div>
                 </div>
@@ -61,13 +58,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p>
-                            Musically, Paul plays guitar, keyboards, flute, bass and sings).
-                            Paul was part of the worship group at his previous church (Life Church, Orcas Island).
-                            While it's not directly music, Paul helps with displaying lyrics for worship in his church.
-                            Paul is a thespian (he likes being in plays and musicals).
-                            Paul has performed in Rocky Horror Picture Show, Beauty and the Beast, SPAMaLot,
-                            and Jesus Christ Superstar. Paul also sang with the Orcas Choral Society and the Orcas A cappella Singers.
-
+                            Musically, Paul plays guitar, keyboards, flute, bass, and also sings. He was part of the worship team at his previous church, Life Church on Orcas Island. While not directly musical, Paul also assists with displaying lyrics for worship at his current church. He is a thespian with a love for theater, having performed in productions like The Rocky Horror Picture Show, Beauty and the Beast, Spamalot, and Jesus Christ Superstar. Paul has also sung with the Orcas Choral Society and the Orcas A Cappella Singers.
                             <button class="btn btn-link p-0 text-dark" type="button" data-bs-toggle="collapse" data-bs-target=".expandableMusicRows" aria-expanded="false" id="toggleMusicButton">
                                 Show more...
                             </button>
@@ -162,12 +153,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            Paul and his wife (Virginia) sang with the Orcas A cappella Singers.
-                            The term a cappella is Italian and translates literally to "in the style of the chapel."
-                            It originally referred to singing without instrumental accompaniment,
-                            as was commonly done in church chapels during the Renaissance period.
-                            Coincidentally, the photo is of the singers singing in a chapel in spain.
-                            Paul is second from the right in the back row and Virgina is second from the left in the front row.
+                            Paul and his wife, Virginia, sang with the Orcas A Cappella Singers. The term “a cappella” is Italian and literally means “in the style of the chapel,” originally referring to singing without instrumental accompaniment, as was common in church chapels during the Renaissance. Coincidentally, the photo shows the group singing in a chapel in Spain. Paul is second from the right in the back row, and Virginia is second from the left in the front row.
                         </p>
                     </div>
                 </div>
@@ -193,10 +179,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p>
-                            Paul has enjoyed photography since he was in high school (where he was in photojournalism).
-                            He actually worked for a local paper as a photo journalist out of High School.
-                            He developed his own black and white, color, and slide photographs back in the days of film.
-                            Today he just does digital. Almost all the photographs on this site were taken by him except for those he is in.
+                            Paul has enjoyed photography since high school, where he was involved in photojournalism. After high school, he worked as a photojournalist for a local newspaper. In the days of film, he developed his own black-and-white, color, and slide photographs. Nowadays, he works exclusively with digital photography. Almost all the photos on this site were taken by him, except for the ones where he’s in the shot.
                             <button class="btn btn-link p-0 text-dark" type="button" data-bs-toggle="collapse" data-bs-target=".expandablePhotographyRows" aria-expanded="false" id="togglePhotographyButton">
                                 Show more...
                             </button>
@@ -213,13 +196,10 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            This is an award-winning photograph that Paul took. He is proud of it. It won third place in a contest at CalArts. The reason he is proud is that there were professional photographers that worked for studios that competed in the competition. It has an interesting story behind it.
-                            The original photo was taken as a slide (Kodachrome). The subject suggested Paul enter it in the contest.
-                            The contest only took paper photographs so Paul decided to do a transfer to paper.
-                            This involves making a paper copy that is a negative, The paper copy is then exposed to another copy which gives a normal image.
-                            In the process there was a slight error in the color of the paper negative which gave a slight pinkish color.
-                            Additionally, there was an error during exposure that caused a slight softening of the image.
-                            The judges liked the color and softness which is why Paul won 3rd place.
+                            This is an award-winning photograph that Paul took, and he’s especially proud of it. It won third place in a contest at CalArts, competing against professional photographers from major studios. The photo has an interesting story behind it. Originally taken on Kodachrome slide film, the subject encouraged Paul to enter it in the contest. Since the contest required paper photographs, Paul had to transfer the slide to paper.
+                        </p>
+                        <p class="fw-light mb-1">
+                            This process involved making a paper negative, then exposing it to create a positive image. During this transfer, a slight color shift in the paper negative introduced a soft pinkish tone, and an exposure error added a subtle softness to the image. The judges appreciated the unexpected color and softness, which ultimately earned Paul third place.
                         </p>
                     </div>
                 </div>
@@ -248,13 +228,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p>
-                            Paul and his wife Virginia enjoy travel.
-                            They have been to almost all the states in the United States.
-                            Internationally, they have been to the Caribbean, Mexico, Guatemala,
-                            Costa Rica, Haiti, Panama, Columbia, Ireland, England,
-                            Scotland, France, Spain, Italy, Australia, New Zealand,
-                            Thailand and Japan.
-                            They also enjoy cruising and have been on Carnival, Princess Cruses, Royal Caribbean, and Norwegian cruises.
+                            Paul and his wife, Virginia, love to travel. They’ve visited nearly all the states in the United States. Internationally, their adventures have taken them to the Caribbean, Mexico, Guatemala, Costa Rica, Haiti, Panama, Colombia, Ireland, England, Scotland, France, Spain, Italy, Australia, New Zealand, Thailand, and Japan. They also enjoy cruising and have sailed with Carnival, Princess Cruises, Royal Caribbean, and Norwegian Cruise Line.
                             <button class="btn btn-link p-0 text-dark"
                                     type="button"
                                     data-bs-toggle="collapse"
@@ -729,12 +703,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p>
-                            Paul loves cooking.
-                            Paul has been the cook in the family for most of his marriage.
-                            He loves cooking so much he opened a restaurant (the Orchid Garden) in eastsound in 2004.
-                            Unfortunately, the restaurant had to close but Paul still loves to cook at home.
-                            Some of his favorite dishes to cook are paella, cioppino, bouillabaisse, jambalaya, sushi, indian, thai and mexican.
-
+                            Paul loves cooking and has been the main chef in his family for most of his marriage. His passion for food led him to open a restaurant, The Orchid Garden, in Eastsound in 2004. Although the restaurant eventually had to close, Paul’s love for cooking continues at home. Some of his favorite dishes to make are paella, cioppino, bouillabaisse, jambalaya, sushi, and a variety of Indian, Thai, and Mexican dishes.
                             <button class="btn btn-link p-0 text-dark" type="button" data-bs-toggle="collapse" data-bs-target=".expandableCookingRows" aria-expanded="false" id="toggleCookingButton">
                                 Show more...
                             </button>
@@ -878,10 +847,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            Sushi is probably the favorite food for Paul and Virginia. They order it whenever they are off island.
-                            They have had fugu (the shushi that can kill you if done wrong).
-                            They also do it at home. They have even done sea urchin at home.
-                            As mentioned, on a family member's birthday they can choose what they want. Virginia chose it for her birthday one time. This is what it looked like.
+                            Sushi is likely the favorite food for both Paul and Virginia—they order it whenever they’re off-island. They’ve even tried fugu (the sushi that requires expert preparation due to its potential danger) and have made sushi at home, including sea urchin. In their family, each person gets to choose their birthday meal, and Virginia once chose sushi for her celebration. Here’s a look at what it looked like.
                         </p>
                     </div>
                 </div>
@@ -974,10 +940,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p>
-                            Paul enjoys gardening both indoor and outdoor. His pride and joy are his <a href="live.html#ponds">ponds</a>, but he loves flower and vegetable gardening as well.
-                            In addition to traditional gardening Paul also gardens hydroponically.
-                            As mentioned Paul loves to cook and hydroponics provides a year round supply of fresh herbs that he uses for cooking.
-
+                            Paul enjoys both indoor and outdoor gardening, with his <a href="live.html#ponds" target="_blank">ponds</a> being his pride and joy. He also loves growing flowers and vegetables and has ventured into hydroponic gardening. His hydroponic setup provides a year-round supply of fresh herbs, perfect for his cooking passion.
                             <button class="btn btn-link p-0 text-dark" type="button" data-bs-toggle="collapse" data-bs-target=".expandableGardeningRows" aria-expanded="false"  id="toggleGardeningButton">
                                 Show more...
                             </button>
@@ -1087,9 +1050,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p>
-                            Paul and Virginia both enjoy SCUBA diving and snorkeling. As mentioned above, they have dived the great barrier reef in Australia.
-                            They have also dived in the Caribbean and Florida. Paul got certified in Southern California so he has dived the channel Islands. Virginia, on the other hand got certified on Orcas Island, and she has dived the Island.
-                            Additionally, they are both dived and snorkeled in Hawaii and Mexico.
+                            Paul and Virginia both enjoy SCUBA diving and snorkeling. They’ve explored the Great Barrier Reef in Australia, as well as dive sites in the Caribbean and Florida. Paul got his SCUBA certification in Southern California and has dived around the Channel Islands, while Virginia was certified on Orcas Island and has dived locally. They have also enjoyed diving and snorkeling together in Hawaii and Mexico.
                             <button class="btn btn-link p-0 text-dark" type="button" data-bs-toggle="collapse" data-bs-target=".expandableDivingRows" aria-expanded="false"  id="toggleDivingButton">
                                 Show more...
                             </button>
@@ -1189,11 +1150,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p>
-                            Paul has been doing home automation since the days of X-10 (the 1980s) when you would push the button and hope that something happened.
-                            Much has changed since them with the advent of Z-Wave, IoT, cameras, motion sensors, Alexa, Google, and Apple.
-                            His house is fully automated. He can access it anywhere in the world to set the thermostat,
-                            turn lights on or off, check the cameras, see if the laundry is done or the refrigerator door has been left open.
-                            Many of the lights are sensor based so he doesn't need to turn the lights on or off.
+                            Paul has been into home automation since the days of X-10 in the 1980s, back when pushing a button and hoping for a response was part of the experience. Technology has come a long way since then, with the advent of Z-Wave, IoT, cameras, motion sensors, Alexa, Google, and Apple. Today, Paul’s home is fully automated, allowing him to control everything remotely—from adjusting the thermostat and turning lights on or off to checking cameras, monitoring laundry status, and even making sure the refrigerator door isn’t left open. Many of the lights are sensor-based, so he rarely has to manually turn them on or off.
                         </p>
                     </div>
                 </div>
@@ -1307,12 +1264,17 @@
                     <div class="col-lg-4 mb-1">
                     </div>
                     <div class="col-lg-8 mb-1">
-                        <p>
-                            At the age of fourteen Paul read a book "The Late Great Planet Earth". At the end was a prayer. He prayed to accept Christ as his Lord and savior.
-                            He then joined a "Jesus People" church called Agape. They met Sundays in a park. After that Paul decided to go to Biola University (a Christian college) to study.
-                            Since then, he has attended Grace Baptist Church (where he and Virginia got married), Grace Community Church, Church on the Way, Calvary Chapel Costa Mesa (when he went to Biola),
-                            various Vineyard Churches and several other churches. When Paul moved to Orcas Island he attended Life Church Orcas and Orcas Island Community Church (which he currently attends).
-                            He enjoys serving (helping with worship and leading CR).
+                        <p class="fw-light mb-1">
+                            At fourteen, Paul read The Late Great Planet Earth and, inspired by the prayer at the end, prayed to accept Christ as his Lord and Savior. He then joined a “Jesus People” church called Agape, which met on Sundays in a park. Later, Paul decided to attend Biola University, a Christian college, to deepen his faith and study.
+                        <p class="fw-light mb-1">
+                            Throughout his life, Paul has been part of several churches, including Grace Baptist Church (where he and Virginia were married), Grace Community Church, Church on the Way, Calvary Chapel Costa Mesa (while at Biola), and various Vineyard churches. After moving to Orcas Island, he attended Life Church Orcas and currently attends Orcas Island Community Church, where he enjoys serving in worship and helping lead Celebrate Recovery (CR).
+                        </p>
+                        <p class="fw-light mb-1">
+                            If you'd like to know more about what Paul Believes you can listen to the video below it says it all...
+                            <video controls width="75%">
+                                <source src="../img/creed.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </p>
                     </div>
                 </div>
