--- a/htdocs/html/live.html
+++ b/htdocs/html/live.html
@@ -45,16 +45,14 @@
                     </div>
                     <div class="col-lg-10 mb-3">
                         <p class="fw-light lead mb-1">
-                            Paul lives in what is considered as one of the most beautiful spots in North America. He lives in Eastsound Washington state on Orcas Island.
-                            Orcas Island is pronounced as "OR-kus" Island, with emphasis on the first syllable. The "Orcas" part sounds like "OR-kuss," and it’s named after the viceroy of New Spain, Juan Vicente de Güemes, who held the title of "Conde de Orcasitas."
-                            Orcas Island is located approximately 15 miles west of Bellingham and 70 miles north-west of Seattle.
-                            The only way to get to the island is via boat or plane. Most islanders use the Washington State Ferries to get on and off the island.
-                            The island is full natural wonders: eagles, owls, hawks, herons, deer, otters, orcas (yes, the whales in this case), seals, sea lions, and more.
-                            Paul's wife proudly proclaims that the island has no predators on it (although we did have a bear for a few days until it got "deported").
+                            Paul lives in one of North America’s most beautiful spots—Eastsound, Washington, on Orcas Island. Pronounced "OR-kus" with emphasis on the first syllable, the island’s name comes from Juan Vicente de Güemes, the Viceroy of New Spain, who held the title "Conde de Orcasitas." Orcas Island lies about 15 miles west of Bellingham and 70 miles northwest of Seattle, accessible only by boat or plane. Most residents rely on the Washington State Ferries to travel on and off the island.
+                        </p>
+                        <p class="fw-light lead mb-1">
+                            Orcas Island is rich with natural beauty, home to eagles, owls, hawks, herons, deer, otters, orcas (yes, the whales), seals, sea lions, and more. As Paul’s wife proudly says, the island has no predators—though they did have a bear briefly, which was promptly “deported.”
                         </p>
                     </div>
                 </div>
-
+            </div>
 <!--*** Home *** -->
             <div class="container" id="home">
                 <div class="align-items-center row">
@@ -76,9 +74,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p>
-                            As was mentioned, Paul lives on Orcas Island. Paul's house is on the east side of the island just above Rosario Resort.
-                            It is south facing at about 300 altitude and has a beautiful view of Eastsound (the sound not the town). You can see the view from the back deck in the picture at the top.
-                            Paul loves water and so he has several ponds.
+                            As mentioned, Paul lives on Orcas Island, with his home located on the east side just above Rosario Resort. Sitting at an elevation of about 300 feet, his south-facing house offers a beautiful view of East Sound (the body of water, not the town). You can see this view from the back deck in the picture at the top. Paul loves water, so he has several ponds around the property.
                             <button class="btn btn-link p-0 text-dark" type="button" data-bs-toggle="collapse" data-bs-target=".expandableHomeRows" aria-expanded="false" id="toggleHomeButton">
                                 Show more...
                             </button>
@@ -94,7 +90,7 @@
                     <div class="col-lg-8 mb-1">
                     </div>
                 </div>
-                <div class="collapse expandableHomeRows align-items-start row">
+                <div class="collapse expandableHomeRows align-items-start row" id="ponds">
                     <div class="col-lg-1 mb-1">
                     </div>
                     <div class="col-lg-3 mb-1">
@@ -104,7 +100,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            This is the main pond it has a waterfall that empies into the pond.
+                            This is the main pond it has a waterfall that empties into the pond.
                         </p>
                     </div>
                 </div>
@@ -158,7 +154,7 @@
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
                             At one time we had swarms of fish.
-                            We still have fish but the racoons have thined them out.
+                            We still have fish but the racoons have thinned them out.
                         </p>
                     </div>
                 </div>
@@ -226,6 +222,7 @@
                         </p>
                     </div>
                 </div>
+            </div>
 <!--*** Orcas *** -->
             <div class="container" id="orcas">
                 <div class="align-items-center row">
@@ -273,7 +270,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            Orcas Island has several lakes: Cascade Lake, Mountain Lake, Twin Lakes, and Killabrew Lake amount others.
+                            Orcas Island has several lakes: Cascade Lake, Mountain Lake, Twin Lakes, and Killebrew Lake amount others.
                             Paul lives next to Moran State Park and is only about 1/2 mile from Cascade Lake. In the summer Paul loves to swim in the lake.
                         </p>
                     </div>
@@ -325,7 +322,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            Orcas also have herons, which you would think would be a good thing, but they like the fish in Paul's pond..
+                            Orcas also have herons, which you would think would be a good thing, but they like the fish in Paul's pond.
                         </p>
                     </div>
                 </div>
@@ -339,7 +336,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            Orcas has deer which locals call "horned cockroaches" because they are so prevelant and they destroy our gardens.
+                            Orcas has deer which locals call "horned cockroaches" because they are so prevalent, and they destroy our gardens.
                             You can tell the tourists because they will stop in the middle of the road to watch the deer.
                         </p>
                     </div>
@@ -368,7 +365,7 @@
                     </div>
                     <div class="col-lg-8 mb-1">
                         <p class="fw-light mb-1">
-                            Orcas has both river and sea otters. Paul had a wonderful experience with them once. As mentioned, Paul likes to swim in Cascade Lake in the summer. At the end of one swim Paul was coming back while swimming. As he got near the end of the swim he saw some heads in the water. At first he thought they were children. As he got closer he thought "thouse dont look right". He then realized he was swimming with otters.
+                            Orcas has both river and sea otters. Paul had a wonderful experience with them once. As mentioned, Paul likes to swim in Cascade Lake in the summer. At the end of one swim Paul was coming back while swimming. As he got near the end of the swim he saw some heads in the water. At first, he thought they were children. As he got closer he thought "those don't look right". He then realized he was swimming with otters.
                         </p>
                     </div>
                 </div>
