--- a/htdocs/html/overview.html
+++ b/htdocs/html/overview.html
@@ -28,9 +28,11 @@
                     <div class="col-lg-6 mb-5">
                         <p class="h6 text-primary text-uppercase">Professional Senior Software Engineer</p>
                         <h1 class="display-4 fw-bold mb-3 text-dark">Paul Carrick</h1>
-                        <p class="fw-light mb-4">Paul is a strong senior software engineer who has many years of experience with abilities and experience in full stack development of web applications. He is also experienced in developing backend tools, databases, and stand-alone applications for multiple operating systems.</p>
                         <p class="fw-light mb-4">
-                            Paul is highly adaptable, with expertise across multiple languages, platforms, and databases. He brings professional experience in various programming languages (including Ruby, C/C++, and Java), databases (such as MySQL, Postgres, and MongoDB), and operating systems (OSX, Windows, and Linux). His priority is delivering quality results, using the tools at hand.
+                            Paul is a seasoned Senior Software Engineer with extensive experience in full-stack web application development, as well as in building backend tools, databases, and standalone applications across multiple operating systems.
+                        </p>
+                        <p class="fw-light mb-4">
+                            Highly adaptable, Paul is skilled in a wide range of programming languages (including Ruby, C/C++, and Java), databases (such as MySQL, Postgres, and MongoDB), and operating systems (macOS, Windows, and Linux). He consistently prioritizes delivering high-quality results, making the most of the tools available.
                         </p>
                             <ul>
                                 <li style="margin-bottom: 1em">
@@ -122,7 +124,7 @@
                         <h5>DevOps</h5>
                         <ul>
                             <li>AWS (EC2, S3, Route 53, Redshift)</li>
-                            <li>Dooker</li>
+                            <li>Docker</li>
                             <li>Kubernetes</li>
                             <li>Nginx</li>
                         </ul>
@@ -158,7 +160,7 @@
                             <li>AJAX</li>
                             <li>JSON</li>
                             <li>XML</li>
-                            <ki>Rspec</ki>
+                            <li>Rspec</li>
                             <li>RESTful Services</li>
                             <li>APIs</li>
                             <li>MVC</li>
